<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marcoly.audiorecorder.MainActivity">

    <TextView
        android:text="@string/record_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnStartRecording"
        android:text="@string/btn_start_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/btnStopRecording"
        android:text="@string/btn_stop_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

    <TextView
        android:text="@string/playback_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnStartPlayback"
        android:text="@string/btn_start_playback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnStopPlayback"
        android:text="@string/btn_stop_playback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" />
</LinearLayout>
